# belajar_knn

./: CMakeLists.txt  README.md  and_gate.cpp  main.cpp  near.cpp  or_gate.cpp  xor_gate.cpp
Arduino_KNN/src/: KNNClassifier.h
